# NaiveJavaInterpreter

./: .gitignore  CMakeLists.txt  README.md
build_ast/: driver.hh  parser.y  scanner.h  scanner.l
build_ast/meta_classes/: utils.h
build_ast/meta_classes/base_element/: BaseElement.h
build_ast/meta_classes/class/: ClassDeclList.h  MainClassDecl.h  include_all.h
build_ast/visitors/: Visitor.h  forward_decl.h
naive_java/: CMakeLists.txt  driver.cpp  driver.hh  parser.y  scanner.l  utils.h
parser_example/: CMakeLists.txt  driver.cpp  driver.hh  parser.y
samples/: ast_build.java  matrix_via_for.java  naive_java_test.in  naive_java_test.java
visitors/: CMakeLists.txt
visitors/meta_classes/base_element/: include_all.h
visitors/meta_classes/class/: ClassDecl.h
visitors/meta_classes/declaration/: MethodDeclaration.h  include_all.h
visitors/meta_classes/expression/: AndExpression.h  BinaryExpression.h  EqualExpression.h  ExpressionList.h  GreaterExpression.h  HardParenExpression.h  LengthExpression.h  LessEqualExpression.h  LessExpression.h  NewExpression.h  OrExpression.h  UnaryExpression.h
visitors/meta_classes/formals/: Formal.h  FormalsList.h
visitors/meta_classes/lvalue/: FieldArrayInvocLvalue.h  FieldInvocLvalue.h  IdentArrayLvalue.h  IdentLvalue.h
visitors/meta_classes/program/: include_all.h
visitors/meta_classes/statement/: AssertStatement.h  ExpressionStatement.h  StatementList.h  WhileStatement.h  include_all.h
visitors/meta_classes/type/: ArrayType.h  IdentifierType.h  StringType.h  include_all.h
visitors/visitors/: PrintVisitor.h
(+35 files in other folders)
